Fixes #2727